deploy/app/jwkts-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwtks-service
spec:
  selector: {}
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: service
        image: app
        args: [ '--config', '/config/stud42.yaml', serve, jwtks ]
        command: [ stud42cli ]
        volumeMounts:
          - name: certs-grpc
            mountPath: '/etc/certs/grpc'
            readOnly: true
          - name: certs-jwk
            mountPath: '/etc/certs/jwk'
            readOnly: true
          - name: config
            mountPath: /config
            readOnly: true
        resources:
          limits:
            memory: "42Mi"
            cpu: "5m"
        ports:
        - containerPort: 5000
        - containerPort: 5500
      volumes:
      - name: certs-grpc
        secret:
          secretName: jwtks-service-jwk-tls
      - name: certs-jwk
        secret:
          secretName: jwtks-service-jwk-tls
      - name: config
        configMap:
          name: stud42-config
